re PR rtl-optimization/72778 (internal compiler error: in create_pre_exit, at mode-switching.c:451)

2016-08-02  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/72778
	* lra-spills.c (regno_in_use_p): New.
	(lra_final_code_change): Use it.

From-SVN: r239000